<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.hilt.ui.MainActivity">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:gravity="center"
        android:text="@string/buttons_welcome"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#902837"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <TextView
        android:id="@+id/tvTitleInMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="10dp"
        android:text="@string/in_memory"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/btMemory1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button_1"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInMemory"
        app:layout_constraintStart_toStartOf="@id/tvTitleInMemory"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btMemory2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_2"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInMemory"
        app:layout_constraintStart_toStartOf="@id/tvTitleInMemory"
        app:layout_constraintTop_toBottomOf="@+id/btMemory1" />

    <Button
        android:id="@+id/btMemory3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_3"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInMemory"
        app:layout_constraintStart_toStartOf="@id/tvTitleInMemory"
        app:layout_constraintTop_toBottomOf="@+id/btMemory2" />

    <Button
        android:id="@+id/btAllLogsInMem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/see_logs_in_memory"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInMemory"
        app:layout_constraintStart_toStartOf="@id/tvTitleInMemory"
        app:layout_constraintTop_toBottomOf="@+id/btMemory3" />

    <TextView
        android:id="@+id/tvTitleInDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="32dp"
        android:text="@string/in_database"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitle" />

    <Button
        android:id="@+id/btDb1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/button_1"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInDb"
        app:layout_constraintStart_toStartOf="@id/tvTitleInDb"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <Button
        android:id="@+id/btDb2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_2"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInDb"
        app:layout_constraintStart_toStartOf="@id/tvTitleInDb"
        app:layout_constraintTop_toBottomOf="@+id/btDb1" />

    <Button
        android:id="@+id/btDb3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/button_3"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInDb"
        app:layout_constraintStart_toStartOf="@id/tvTitleInDb"
        app:layout_constraintTop_toBottomOf="@+id/btDb2" />

    <Button
        android:id="@+id/btAllLogsInDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/see_logs_in_db"
        app:layout_constraintEnd_toEndOf="@id/tvTitleInDb"
        app:layout_constraintStart_toStartOf="@id/tvTitleInDb"
        app:layout_constraintTop_toBottomOf="@+id/btDb3" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btClearMemLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear_in_mem_logs"
        app:layout_constraintStart_toStartOf="@id/btAllLogsInMem"
        app:layout_constraintTop_toBottomOf="@+id/btAllLogsInMem" />

    <Button
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/btClearDbLogs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/clear_in_db_logs"
        app:layout_constraintStart_toStartOf="@id/btAllLogsInDb"
        app:layout_constraintTop_toBottomOf="@+id/btAllLogsInDb" />

</androidx.constraintlayout.widget.ConstraintLayout>
